syntax = "proto3";

package storage;
option java_multiple_files =  true;
option java_package = "com.rynamo.grpc.storage";
option java_outer_classname = "StorageProto";

message KeyMessage {
    string key = 1;
    optional string intendedRecipient = 2;
}

message ValueMessage {
    bytes value = 1;
    bool success = 2;
}

message KeyValMessage {
    optional string key = 1;
    bytes value = 2;
}

service Storage {
    rpc Get(KeyMessage) returns (ValueMessage);
    rpc Put(KeyValMessage) returns (ValueMessage);
    rpc CoordinateGet(KeyMessage) returns (ValueMessage);
    rpc CoordinatePut(KeyValMessage) returns (ValueMessage);
}
